Tighten our checks for needsSectionRecalc in RenderTable https://bugs.webkit.org/show_bug.cgi?id=73972

Reviewed by Adam Barth.

Refactoring covered under the new tests.

Now most of the functions use the header, first body and footer's
getters that checks if we need a section recalculation. The only
exceptions are addChild and recalcSections as they can be called
with the bit set.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):
(WebCore::RenderTable::outerBorderAfter):
(WebCore::RenderTable::sectionAbove):
(WebCore::RenderTable::sectionBelow):
Updated the previous functions to use the sections' getters.

(WebCore::RenderTable::RenderTable):
(WebCore::RenderTable::addChild):
(WebCore::RenderTable::recalcSections):
Update the previous functions after the 2 renames
(see below).

* rendering/RenderTable.h:
(WebCore::RenderTable::header):
(WebCore::RenderTable::footer):
(WebCore::RenderTable::firstBody):
Added some ASSERT here. Also renamed m_head to m_header
and m_foot to m_footer to match the getter and to avoid
unneeded abbreviation.

(WebCore::RenderTable::hasSections):
(WebCore::RenderTable::topSection):
Updated the previous functions to use the section getters.


Canonical link: https://commits.webkit.org/92095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103794 268f45cc-cd09-0410-ab3c-d52691b4dbfc